<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PunchCard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="RightArrow">--&#62;</string>
    <string name="LeftArrow">&#60;--</string>
    <string name="title_activity_history">History</string>
    <string name="activity_settings_title">Setting test</string>
    <string name="delete_advertise">Do you really want to delete this occupation?</string>
    <string name="delete_advertisehisto">Do you really want to delete this history?</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="occupation_deleted">deleted</string>


    <string name="occupation_parameters_title">Occupation parameters</string>
    <string name="occ_params_cat_round">Rounding settings</string>
    <string name="occ_params_cat_other">Other settings</string>

    <string name="occ_params_round_time_value_title">Rounding time value</string>
    <string name="occ_params_round_time_value_dialog">Set rounding time value</string>


    <string name="occ_params_round_type_title">Rounding type</string>
    <string name="occ_params_round_type_dialod">Set rounding type</string>

    <string name="PeriodEnding">Set Period ending</string>
    <string name="Deletepopup">Delete</string>


    <string name="email_subject">Sent from your punchCard app.</string>
    <string name="total_time">Total time</string>
    <string name="current_period">Current period</string>

    <!-- expandableListView -->
    <string name="exp_list_childText">Total Time: </string>

    <!-- popupMenu history-->
    <string name="popup_menu_unset_title">Unset Period ending</string>

    <string name="new_history">New History</string>



    <string name="poppupEmail">Send by mail</string>
    <string name="popupapram">Occupation parameters</string>
</resources>
